[gd_scene load_steps=2 format=3 uid="uid://4xjytk72fndh"]

[ext_resource type="Script" path="res://UIs/InGame/InGameUI.gd" id="1_ose65"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ose65")

[node name="PlayerInfo" type="GridContainer" parent="."]
layout_mode = 1
offset_right = 256.0
offset_bottom = 88.0
columns = 2

[node name="HPLabe" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "HP:"

[node name="HPBar" type="ProgressBar" parent="PlayerInfo"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ShieldLabe" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "Shield:"

[node name="ShieldBar" type="ProgressBar" parent="PlayerInfo"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GoldLabe" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "Gold:"

[node name="GoldAm" type="Label" parent="PlayerInfo"]
layout_mode = 2
text = "10$"

[node name="RoundInfo" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_right = 84.0
offset_bottom = 77.0
grow_horizontal = 2
rotation = -0.0033714
columns = 5

[node name="RedScore" type="Label" parent="RoundInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.141176, 0.164706, 1)
text = "210"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="RoundInfo"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Timer" type="Label" parent="RoundInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RoundInfo"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="BlueScore" type="Label" parent="RoundInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.980392, 1, 1)
text = "121"
vertical_alignment = 1

[node name="GunInfo" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponName" type="Label" parent="GunInfo"]
layout_mode = 2
text = "MURASAMA"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeaponAmo" type="Label" parent="GunInfo"]
layout_mode = 2
text = "inf."
horizontal_alignment = 2
vertical_alignment = 1

[node name="KillFeed" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ability" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -57.0
offset_right = 200.0
grow_vertical = 0

[node name="Ability_name" type="Label" parent="Ability"]
layout_mode = 2
text = "Revive:"

[node name="AbilityRechargeProgress" type="ProgressBar" parent="Ability"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Tab" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Inventory" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
